MGMT-13476: Tune dnf to download packages faster
Enable fastestmirror and increase max_parallel_downloads to 10. As a
side effect, we have a chance to select different mirrors from time to
time, which should mitigate issues with the default mirrors.

--- a/Dockerfile.assisted-test-infra
+++ b/Dockerfile.assisted-test-infra
@@ -12,6 +12,10 @@ RUN chmod g+w /etc/passwd && \
     echo 'echo default:x:$(id -u):$(id -g):Default Application User:/alabama:/sbin/nologin\ >> /etc/passwd' > /usr/local/bin/fix_uid.sh && \
     chmod g+rwx /usr/local/bin/fix_uid.sh
 
+# tune dnf to download more packages in parallel and from the closest mirror
+RUN echo "fastestmirror=1" >> /etc/dnf/dnf.conf && \
+    echo "max_parallel_downloads=10" >> /etc/dnf/dnf.conf
+
 # CRB repo is required for libvirt-devel
 RUN dnf -y install --enablerepo=crb \
   make \
