--- a/skipper.env
+++ b/skipper.env
@@ -146,3 +146,5 @@ BROKEN_AGENT_IMAGE
 DISCOVERY_KERNEL_ARGUMENTS
 BOOTSTRAP_INJECT_MANIFEST
 INSTALL_MANIFESTS_DIR
+CPU_ARCHITECTURE
+DAY2_CPU_ARCHITECTURE
