MGMT-12442: Setup libvirt hook on ARM machine
The libvirt hook is required on the secondary (aka ARM) host in order to
allow traffic with the libvirt hosts on the primary machine.

--- a/ansible_files/roles/common/setup_libvirtd/handlers/main.yml
+++ b/ansible_files/roles/common/setup_libvirtd/handlers/main.yml
@@ -1,4 +1,4 @@
-- name: Start libvirtd service
+- name: Restart libvirtd service
   ansible.builtin.systemd:
     name: libvirtd.service
-    state: started
+    state: restarted
