--- a/ansible_files/roles/equinix/export_primary_device_connection_details/tasks/main.yml
+++ b/ansible_files/roles/equinix/export_primary_device_connection_details/tasks/main.yml
@@ -3,9 +3,21 @@
     msg: Group primary must exits and contain exactly 1 host
   when: groups[primary_device_group_name] is not defined or (groups[primary_device_group_name] | length != 1)
 
-- name: "Export connection details of primary device"
-  ansible.builtin.template:
-    src: "ci-machine-config.sh.j2"
-    dest: "{{ shared_dir }}/ci-machine-config.sh"
-    mode: 0644
+- block:
+  - name: "Export connection details of primary device"
+    ansible.builtin.template:
+      src: "ci-machine-config.sh.j2"
+      dest: "{{ shared_dir }}/ci-machine-config.sh"
+      mode: 0644
+
+  - name: Write fix uid file
+    ansible.builtin.copy:
+      src: fix-uid.sh
+      dest: "{{ shared_dir }}/fix-uid.sh"
+
+  - name: Write Packet common configuration file
+    ansible.builtin.copy:
+      src: packet-conf.sh
+      dest: "{{ shared_dir }}/packet-conf.sh"
+
   when: shared_dir is defined
