MGMT-12442: Make service URL cutomizable
In the context of heterogeneous cluster, we want the service URL to
target the private IP of the primary Equinix machine in order to pull
the ingnition from the secondary machine.

--- a/ansible_files/equinix_heterogeneous_create_infra_playbook.yml
+++ b/ansible_files/equinix_heterogeneous_create_infra_playbook.yml
@@ -125,3 +125,5 @@
       ansible.builtin.import_role:
         name: test-infra/export-heterogeneous-day2-configuration
       delegate_to: localhost
+      vars:
+        assisted_service_url: "{{ hostvars[groups['primary'][0]].access_private_ipv4 }}"
