--- a/skipper.yaml
+++ b/skipper.yaml
@@ -12,6 +12,7 @@ volumes:
   - /usr/local/bin/kubectl:/usr/local/bin/kubectl
   - $MINIKUBE_HOME:$MINIKUBE_HOME
   - $(which iptables):/usr/sbin/iptables
+  - $(which ip6tables):/usr/sbin/ip6tables
   # config
   - $HOME/.kube/:$HOME/.kube/
   - $HOME/.minikube/:$HOME/.minikube/
