--- a/Dockerfile.assisted-test-infra
+++ b/Dockerfile.assisted-test-infra
@@ -69,6 +69,7 @@ COPY . .
 
 # init terraform in order to cache the provider
 RUN terraform -chdir=/home/assisted-test-infra/terraform_files/equinix-ci-machine init && \
+    terraform -chdir=/home/assisted-test-infra/terraform_files/oci-ci-machine init && \
     chgrp -R 0 /home/assisted-test-infra && \
     chmod -R g=u /home/assisted-test-infra
 
