--- a/ansible_files/vars/ci_oci_infrastucture.yml
+++ b/ansible_files/vars/ci_oci_infrastucture.yml
@@ -8,3 +8,4 @@ oci_fingerprint: "{{ lookup('file', cluster_profile_dir + '/fingerprint') | trim
 oci_region: "{{ lookup('file', cluster_profile_dir + '/region') | trim }}"
 oci_private_key_path: "{{ cluster_profile_dir }}/private_key"
 oci_compartment_id: "{{ lookup('file', cluster_profile_dir + '/parent_compartment_ocid') | trim }}"
+oci_dns_zone: "assisted-ci.oci-rhelcert.edge-sro.rhecoeng.com"
