--- a/ansible_files/roles/common/setup_ssh_key_pair/tasks/main.yml
+++ b/ansible_files/roles/common/setup_ssh_key_pair/tasks/main.yml
@@ -1,6 +1,7 @@
 - name: Generate an OpenSSH keypair
   community.crypto.openssh_keypair:
     path: "{{ shared_dir }}/{{ ssh_private_key_name }}"
+    mode: '0600'
   delegate_to: localhost
   register: ssh_key_pair
   run_once: true
