--- a/ansible_files/oci_generic_destroy_ci_machine_playbook.yml
+++ b/ansible_files/oci_generic_destroy_ci_machine_playbook.yml
@@ -1,4 +1,18 @@
-- name: Destroy OCI infrastructure
+- name: Destroy OCI instrastructure provisionned by test-infra
+  hosts: primary
+  tasks:
+    - name: Destroy OCI instrastructure provisionned by test-infra
+      ansible.builtin.shell: |
+        source /root/config.sh
+        make destroy_oci
+      args:
+        chdir: /home/assisted
+      retries: 5
+      delay: 30
+      register: result
+      until: result is succeeded
+      ignore_errors: true
+- name: Destroy OCI infrastructure provisionned for CI machine
   hosts: localhost
   vars_prompt:
     - name: oci_tf_state_file
